--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>Test Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <!--JQuery Link-->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -29,6 +30,14 @@
 
 
 <body>
+<div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">page1</a>
+    <a href="#">Page2</a>
+    <a href="#">github</a>
+</div>
+<button class="openbtn btn btn-primary ml-4 mt-4" onclick="openNav()">SideMenu</button>
+
 <div class="container">
     <ul class="nav nav-tabs mt-4" id="myTab" role="tablist">
         <li class="nav-item">
@@ -43,11 +52,14 @@
             <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
                aria-selected="false">Contact</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="page1.html">Page</a>
+        </li>
     </ul>
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             <!-- Form Start -->
-            <form class="mt-4">
+            <form class="mt-4" id="myForm">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="name">Name</label>
@@ -94,6 +106,7 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" onclick="clearForm()" class="btn btn-danger">Clear</button>
             </form>
             <!-- Form End -->
         </div>
@@ -111,6 +124,21 @@
         </script>
     </div>
 </div>
+
+<script type="text/javascript">
+  function openNav() {
+    document.getElementById("mySidebar").style.width = "250px";
+  }
+
+  function closeNav() {
+    document.getElementById("mySidebar").style.width = "0";
+  }
+  
+  function clearForm() {
+    document.getElementById("myForm").reset();
+  }
+
+</script>
 
 </body>
 
